# rust-order-book

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: orderbook_benchmark.rs
src/: lib.rs  main.rs
src/api/: mod.rs  routes.rs  types.rs  websocket.rs
src/engine/: mod.rs  order.rs  orderbook.rs  price.rs  trade.rs
src/events/: mod.rs
src/exchange/: binance.rs  bybit.rs  coinbase.rs  mod.rs
